--- a/aws/AppsDeploymentsStrategy/publicEndpoint.yaml
+++ b/aws/AppsDeploymentsStrategy/publicEndpoint.yaml
@@ -4,13 +4,13 @@ metadata:
   name: maxblogapi-service
   labels:
     app: maxblogapi
-    role: blue
+    role: {DEPLOYMENT}
     env: prod
 spec:
   type: LoadBalancer
   selector:
     app: maxblogapi
-    role: blue
+    role: {DEPLOYMENT}
   ports:
     - port: 80
       targetPort: 5000
